# BlockGame

./: .gitignore  CMakeLists.txt  README.md  build.sh  configure-build-mingw.sh  jonk.txt  run.sh  setup-run.sh
batch-scripts/: run.cmd  setup-run.cmd
cmake/: cache.cmake  dependencies.cmake  warnings.cmake
nbt_testing/: bigtest.snbt  bigtest_reserialized.nbt
res/models/: create_retextured_block_model.js
res/models/block/: clay_tile.jonk  cross.jonk  (+38 more)
res/shaders/: main.frag  main.vert
src/: Game.cpp  Game.h  Main.cpp
src/block/: Block.cpp  Block.h  BlockRegistry.h  BlockState.cpp  BlockState.h
src/fluid/: Fluid.cpp  Fluid.h  FluidFlow.cpp  FluidFlow.h  FluidRegistry.h  FluidState.cpp  FluidState.h
src/game_states/: GameState.h  PlayState.cpp  PlayState.h  game_states.cpp  game_states.h
src/gui/: Gui.cpp  Gui.h
src/input/: InputManager.cpp  InputManager.h  KeyBind.cpp  KeyBind.h  key_input.cpp  key_input.h
src/render/: Camera.h  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  RenderBuffer.cpp  RenderBuffer.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexFormat.cpp  VertexFormat.h  Window.cpp  Window.h
src/util/: Color.cpp  Color.h  HistoryBuffer.h  IOUtils.cpp  IOUtils.h  RayCastResult.h  RectPacker.h  Registry.h  ct_string.h  direction.cpp  direction.h  type_traits.h  uuid.cpp  uuid.h  variant_visitor.h
src/world/: BlockLight.h  BlockUpdate.h  World.cpp  World.h  WorldView.h
vscode-settings-template/: launch.json  settings.json  tasks.json
(+148 files in other folders)
